[package]
name = "bk-tree"
version = "0.5.0"
authors = ["Eugene Bulkin <eugene.bulkin2@gmail.com>"]
description = "A Rust BK-tree implementation"

documentation = "https://docs.rs/bk-tree/"
repository = "https://github.com/eugene-bulkin/rust-bk-tree"

readme = "README.md"
license = "MIT"
keywords = ["fuzzy", "search", "BK-tree"]
categories = ["data-structures", "text-processing"]

[dependencies]
fnv = { version = "1.0.7", optional = true }
triple_accel = { git = "https://github.com/LegitCamper/triple_accel.git" }
serde = { version = "1.0", features = ["derive"], optional = true }
hashbrown = { version = "0.14.5", optional = true }

[dev-dependencies]
rand = "0.3"
bincode = "1.3"

[features]
default = ["no_std"]
enable-fnv = ["fnv"]
no_std = ["hashbrown"]
hashbrown = ["dep:hashbrown"] # no_std support
serde = ["dep:serde"]
